[package]
name = "lexer_bench"
version = "0.1.0"
authors = ["Ömer Sinan Ağacan <omeragacan@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
lexgen = { path = "/home/omer/rust/lexgen/crates/lexgen" }
lexgen_util = { path = "/home/omer/rust/lexgen/crates/lexgen_util" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false
